--- a/style.css
+++ b/style.css
@@ -23,14 +23,34 @@ body {
 
 header{
   width: 100%;
-  height: 10%;
+  height: 8%;
+}
+
+nav {
+  float: right;
 }
 
 ul{
-  display: inline-flex;
-  justify-content: space-between;
+  display: flex;
+  justify-content: space-around;
   list-style: none;
-  float: right;
+}
+
+li{
+  padding: 1rem;
+  color: #c5c6ce;
+}
+
+.grid-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  height: 92%;
+}
+
+.image-span-2{
+  grid-column: span 2;
 }
 
 .attribution {
