--- a/style.css
+++ b/style.css
@@ -17,13 +17,14 @@ body {
 }
 
 .container {
-  height: 80vh;
-  width: 80vw;
+  height: 90vh;
+  width: 90vw;
 }
 
 header{
   width: 100%;
   height: 8%;
+  margin-bottom: 2.5rem;
 }
 
 nav {
@@ -46,11 +47,11 @@ li{
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
-  height: 92%;
+  height: 91.9%;
 }
 
 .image-span-2{
-  grid-column: span 2;
+  grid-column: auto / span 2;
 }
 
 .attribution {
