--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body {
 }
 
 .container {
-  height: 90vh;
-  width: 90vw;
+  height: 80vh;
+  width: 80vw;
 }
 
 header {
@@ -61,7 +61,30 @@ li {
 }
 
 .new-section {
+  display: flex;
+  flex-flow: column;
   background-color: #00001a;
+  grid-row: auto / span 2;
+}
+
+.new-section > h1 {
+  color: #e9ab53;
+  font-size: 2rem;
+  margin: 1.5rem 1.5rem;
+}
+
+.new-width{
+  width: 80%;
+  margin: 1.5rem 1.5rem;
+}
+
+h3 {
+  color: #fff;
+}
+
+.new-1, .new-2, .new-3 > p {
+  color: #5d5f79;
+  margin: 1rem;
 }
 
 .attribution {
