--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ li {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 470px);
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
   height: 91.9%;
