--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
 * {
-  box-sizing: border-box;
+  box-sizing: content-box;
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
@@ -17,8 +17,8 @@ body {
 }
 
 .container {
-  height: 70vh;
-  width: 70vw;
+  height: 90vh;
+  width: 65vw;
 }
 
 header {
@@ -69,19 +69,19 @@ li {
 }
 
 hr{
-  width: 95%;
+  width: 85%;
   margin: auto;
+  opacity: 0.2;
 }
 
 .new-section > h1 {
   color: #e9ab53;
   font-size: 2rem;
-  margin: 1.5rem 1.5rem;
+  margin: 1.5rem;
 }
 
 .new-width{
   width: 80%;
-  margin: 1.5rem 1.5rem;
 }
 
 h3 {
@@ -90,6 +90,9 @@ h3 {
 
 .new-1, .new-2, .new-3 > p {
   color: #5d5f79;
+}
+
+.new-1, .new-2, .new-3 > h3 {
   margin: 1rem;
 }
 
