--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ a {
 
 /*Styling for the main content of this website*/
 
+/*Styling for the first row of the grid*/
+
 main {
   display: grid;
   grid-template-columns: repeat(11, 1fr);
@@ -82,21 +84,65 @@ img {
 .new-content-container > h1 {
   font-size: 2rem;
   color: #e9ab53;
+  padding: 1.5rem;
 }
 
 .new-content-container > h4 {
   color: #fff;
-  margin: 1rem;
+  margin: 1.5rem;
 }
 
 .new-content-container > p {
- color: #5d5f79;
- margin: 1rem;
-
+  color: #5d5f79;
+  margin: 1.5rem;
 }
 
-hr{
+hr {
   opacity: 0.2;
-  margin: 1rem;
-
+  margin: 1.5rem;
 }
+
+/*Styling for second row (excludes the part of the new container that spans 2 rows*/
+
+.main-article {
+  display: flex;
+  justify-content: space-between;
+  grid-column: 1 / span 8;
+}
+
+.main-article-heading > h1 {
+  font-size: 3.5rem;
+  font-weight: 800;
+}
+
+.main-article-heading {
+  width: 45%;
+}
+
+.main-article-info {
+  width: 45%;
+  margin-top: 0.6rem;
+}
+
+.red-rectangle {
+  position: relative;
+  top: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f15e50;
+  height: 20%;
+  width: 50%;
+}
+
+.red-rectangle > h5 {
+  font-weight: 400;
+  letter-spacing: 0.3rem;
+   color: #fff;
+}
+
+.main-article-info > p {
+  color: #5d5f79;
+}
+
+
