--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ li {
   margin-left: 1.5rem;
 }
 
+a:hover{
+  color: #f15e50;
+}
+
 a {
   color: #c5c6ce;
   text-decoration: none;
@@ -91,6 +95,9 @@ main {
   margin: 1.2rem;
 }
 
+.new-content-container > h4:hover{
+  color: #e9ab53;
+}
 .new-content-container > p {
   color: #5d5f79;
   margin: 1.2rem;
@@ -104,26 +111,26 @@ hr {
 /*Styling for second row (excludes the part of the new container that spans 2 rows*/
 
 .main-article {
-  grid-column: 1 / span 8 ;
+  grid-column: 1 / span 8;
   grid-row: 6 / span 3;
   display: grid;
   grid-template-rows: repeat(8, auto);
-  grid-template-columns: repeat(12, 1fr); 
-  gap: 20px; 
-}
-
-.main-article-heading > h1 {
-  font-size: 3.5rem;
-  font-weight: 800;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 20px;
 }
 
 .main-article-heading {
   grid-column: 1 / span 6;
-  grid-row: 1 / span 8; 
+  grid-row: 1 / span 9;
+}
+
+.main-article-heading > h1 {
+  font-size: 3rem;
+  font-weight: 800;
 }
 
 .main-article-info {
-  grid-row:  1/ span 8; 
+  grid-row: 1 / span 9;
   grid-column: 7 / span 6;
 }
 
@@ -138,14 +145,19 @@ hr {
   width: 50%;
 }
 
+.red-rectangle:hover{
+  background-color: #000;
+}
+
 .red-rectangle > h5 {
   font-weight: 400;
   letter-spacing: 0.3rem;
-   color: #fff;
+  color: #fff;
 }
 
 .main-article-info > p {
   color: #5d5f79;
 }
 
+/*Styling for the numbered articles at the bottom of the page*/
 
